fix font sizer minus vertical alignment and center text

--- a/css/rt_afterburner2-custom.css
+++ b/css/rt_afterburner2-custom.css
@@ -18,7 +18,7 @@ body {background-attachment: fixed;background-color: #0C3045;background-image: u
 .component-content p {text-align:justify;}  /* main content justified text  */
 #rt-header .rt-container { background: url("../images/item-center.png") repeat-x scroll 0 0 rgba(0, 0, 0, 0); }
 #rt-accessibility {color: #FFFFFF;font-size: 0.9em;line-height: 1.2em;padding-top:2px;}
-#rt-accessibility #rt-buttons .small .button:after {content: "-";font-size: 3em;margin-top: -5px;}
+#rt-accessibility #rt-buttons .small .button:after {content: "-";font-size: 3em;margin-top: -7px;}
 #rt-accessibility #rt-buttons .large .button:after {content: "+";font-size: 2em;margin-top: -5px;}
 #rt-accessibility #rt-buttons .button {background-color: #335533;height: 2em;line-height: 2em;padding: 0px;text-align: center;width: 40px;}
 #rt-accessibility #rt-buttons .button:hover {background: none repeat scroll 0px 0px #00810B;box-shadow: 0px 1px 2px #B7DD7E inset;}
@@ -141,6 +141,11 @@ ul.latestnewsplusbox li:hover {
 
 .plusbox .module-content {
     padding-top: 14px;  /* required by increasing modue titla height */
+}
+
+/* JPS 17.11.2013 */
+.rt-desc {
+    text-align: center;  /* center font sizer text */
 }
 
 /*  Typography  */
